--- a/demo/index.html
+++ b/demo/index.html
@@ -20,7 +20,7 @@
       <h3>Basic atom-feedback demo</h3>
       <demo-snippet>
         <template>
-          <atom-feedback></atom-feedback>
+          <atom-feedback target="https://www.google.com"></atom-feedback>
         </template>
       </demo-snippet>
     </div>
